istio/user/user-rt.yaml
#User-virtual-service-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-retry
  namespace: k8s
spec:
  hosts:
  - "*"
  gateways:
  - k8s/k8s-gateway
  http:
  - match:
    - uri:
        prefix: /user-service
    retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: gateway-error,connect-failure,refused-stream    
    route:
    - destination:
        host: user-service
        port:
          number: 80
